# neugs-utils

./: .gitignore  LICENSE  TODO.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
docs/source/: beforeyoubegin.rst  beforeyoubegin.rst.old  c_lang_support.md  code.rst  conf.py  development_getting_started.md  getting_started.md  index.rst  modules.rst  neugs_utils.rst  reference_index.rst  utilities.md
examples/: README.md
examples/IslandGrid/: run_tests.py
examples/IslandGrid/Solution/: IslandGrid.py
examples/IslandGrid/src/: IslandGrid.py
examples/IslandGrid/tests/: test_island_grid.py
examples/SimpleCalc/: run_tests.py
examples/SimpleCalc/Solution/: SimpleCalc.py
examples/SimpleCalc/src/: SimpleCalc.py
examples/SimpleCalc/tests/: test_simple_calc.py
neugs_utils/: CUnitTest.py  __init__.py  build_autograder.py  common_tests.py  context_managers.py  language_support.py  tier_grading.py
neugs_utils/scripts/: build_autograder.py  test_utils.py  tests_utils.py
neugs_utils/scripts/templates/: __init__.py  requirements.txt  run_autograder  setup.sh  setup_file.py  test_runner.py
neugs_utils/templates/: requirements.txt  run_autograder  run_tests.py
tests/: Makefile  results.json  run_tests.py  test.c
tests/examples/: test_c.py  test_one.py
